[tool.poetry]
name = "physio-download"
version = "0.1.0"
description = ""
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
PyPDF2 = "^1.26.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
